--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
     <div id="social-media">
 
-        <a id="socialLink" href="https://www.google.com/" target="_blank">
-            <img id="gitLink" width="40px" src="./images/lightGitIcon.png" alt="">
+        <a id="socialLink" href="https://www.github.com/ionmateus/" target="_blank">
+            <img id="gitLink" width="40px" src="./images/lightGitIcon.png">
         </a>
 
         <a id="socialLink" href="https://www.google.com/" target="_blank">
-            <img id="linkedinLink" width="40px" src="./images/lightLinkedinIcon.png" alt="">
+            <img id="linkedinLink" width="40px" src="./images/lightLinkedinIcon.png">
         </a>
 
         <a id="socialLink" href="https://www.google.com/" target="_blank">
-            <img id="instaLink" width="40px" src="./images/lightInstaIcon.png" alt="">
+            <img id="instaLink" width="40px" src="./images/lightInstaIcon.png">
         </a>
 
     </div>
