--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div id="moreOptionsDiv" onclick="HideMoreOptions()">
         
-        <a id="headLink" href="#cover">Home</a>
+        <a id="headLink" href="./index.html">Home</a>
         <a id="headLink" href="#">About</a>
         <a id="headLink" href="#">Projects</a>
         <button id="changeTheme" onclick="setTheme();HideMoreOptions()">
@@ -62,7 +62,7 @@
             <img width="40px" src="./images/lightGitIcon.png">
         </a>
 <br>
-        <a id="socialLink" href="https://www.google.com/" target="_blank">
+        <a id="socialLink" href="./resume.html" target="_blank">
             <img width="40px" src="./images/lightCvIcon.png">
         </a>
 
