cards, projects, links

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Ion Mateus | Home</title>
+    <title>Ion Mateus</title>
 
     <link rel="stylesheet" href="./styles/structure.css">
     <link rel="stylesheet" href="./styles/style.css">
@@ -61,7 +61,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias debitis nobis. Debitis culpa laboriosam odit esse ipsum nisi qimus laudantium facere iure, iusto odio error. Reprehenderit, quasi fugit?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias debitis nobis. Debitis culpa laboriosam odit esse ipsum nisi qimus laudantium facere iure, iusto odio error. Reprehenderit, quasi fugit?</p>
        <br>
+
+
         <img width="100%" src="./images/image.jpg" alt="">
+        
         <br><br>
         <button id="btnDownload"  style="background-color:var(--principal-color)"><a href="./images/image.jpg" download  style="color:var(--dark-grey)">Click Here to Download</a></button>
 
