--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <header >
 
-    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus</h1>
+    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus v.12</h1>
 
     <div id="menuLinks">
 
