--- a/resume.html
+++ b/resume.html
@@ -56,9 +56,8 @@
 <div id="cover">
 
     <div id="coverContent">
-        <h1>Lorem, ipsum! 👋</h1><br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias debitis nobis. Debitis culpa laboriosam odit esse ipsum nisi qimus laudantium facere iure, iusto odio error. Reprehenderit, quasi fugit?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias debitis nobis. Debitis culpa laboriosam odit esse ipsum nisi qimus laudantium facere iure, iusto odio error. Reprehenderit, quasi fugit?</p>
+        <h1 style="text-align: center;">My Resume</h1><br>
+        <p style="text-align: center;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque dolor quasi tempora ipsa dignissimos minima. Error corrupti delectus, eum ipsam minus optio nobis eveniet, inventore quaerat cum vel doloremque repudiandae?</p>
        <br>
 
 
