--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ion Mateus">
 
     <title>Ion Mateus</title>
 
@@ -22,7 +23,7 @@
 
 <header >
 
-    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus v.12</h1>
+    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus</h1>
 
     <div id="menuLinks">
 
