--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="author" content="Ion Mateus">
+
+    <meta name="google-site-verification" content="zYNku5dOOtwoCbBCx5pgI9Avb7YMIJTfBmYu2Qqp1EA" />
 
     <title>Ion Mateus</title>
 
