--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <meta name="google-site-verification" content="K9Yel8W_i-lbF5V3sZaOs6fHDiT9E3qEryAkoN9DeZA" />
 
+    <meta property="og:image" content="./images/myIcon.png">
+
+    <meta name="description" content="Site pessoal de Ion Mateus. Programador." />
+
     <title>Ion Mateus</title>
 
     <link rel="stylesheet" href="./styles/structure.css">
@@ -26,7 +30,7 @@
 
 <header >
 
-    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus</h1>
+    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus 1</h1>
 
     <div id="menuLinks">
 
