flip card, projects

--- a/resume.html
+++ b/resume.html
@@ -18,20 +18,22 @@
 </head>
 <body >
 
-
-
-    <div id="header"></div>
-
-
+<div id="header"></div>
 
 <div id="cover">
 
-    <div id="coverContent">
-        <h1 style="text-align: center;">My Resume</h1><br>
-        <p style="text-align: center;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque dolor quasi tempora ipsa dignissimos minima. Error corrupti delectus, eum ipsam minus optio nobis eveniet, inventore quaerat cum vel doloremque repudiandae?</p>
+    <div id="coverContent" style="text-align: center;">
+        <h1>Ion Mateus</h1><br>
+        <i><b>Estudante de Informática</b></i> <br><br>
+
+        <h3>Habilidades</h3><br>
+        <p>JavaScript | HTML | CSS | Python</p><br>
+
+        <h3>Sobre</h3><br>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore dignissimos ipsam nulla consequuntur corrupti quos at repellat placeat nisi nesciunt numquam, incidunt cupiditate explicabo, doloribus optio assumenda similique exercitationem eius!</p>
+
+
        <br>
-
-
         <img width="100%" src="./images/image.jpg" alt="">
         
         <br><br>
