--- a/others/index.html
+++ b/others/index.html
@@ -7,22 +7,29 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./others.css">
     <script src="../scripts/changeTheme.js"></script>
-    <script src=""></script>
 </head>
 <body>
 
     <header>
-        <a href="../index.html">Home</a>
+        <a href="../">Home</a>
         <a href="">Projects</a>
         <a href="">About</a>
         <a href="">Others</a>
     </header>
     <button id="btnTheme" onclick="changeTheme()"></button>
 
-    <h1>Others</h1>
+    <div id="othersLinks">
 
 
+
+        <button  onclick="window.open('https://www.github.com/ionmateus', '_blank');"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </button>
+
+
+
+    </div>
+    
 
 </body>
 </html>
