--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
 
     <div id="hero">
-        <h2>Programming Student</h2>
-        <h1>Ion Mateus</h1> <br>
+        <h2>Lorem Ipsum</h2>
+        <h1>Lorem Ipsum</h1> <br>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad sit culpa consectetur minima, tenetur et maxime error? Provident a quo quod! Harum pariatur nam autem culpa voluptates ab, tempora ipsa.</p>
         <br>
         <div id="heroBtnDiv">
