--- a/others/index.html
+++ b/others/index.html
@@ -14,19 +14,19 @@
 
     <header>
         <a href="../">Home</a>
-        <a href="">Projects</a>
-        <a href="">About</a>
-        <a href="">Others</a>
+        <a href="../projects/">Projects</a>
+        <a href="../about/">About</a>
+        <a href="" style="text-decoration: underline;">Others</a>
     </header>
     <button id="btnTheme" onclick="changeTheme()"></button>
 
     <div id="othersLinks">
 
-
-
         <button  onclick="window.open('https://www.github.com/ionmateus', '_blank');"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"> </button>
 
+        <button  onclick="window.open('https://leetcode.com/ionmateus/', '_blank');"> <img src="https://cdn.icon-icons.com/icons2/2389/PNG/512/leetcode_logo_icon_145113.png"> </button>
 
+        <button  onclick="window.open('https://discord.com/', '_blank');"> <img src="https://www.freeiconspng.com/uploads/discord-black-icon-1.png"> </button>
 
     </div>
     
