--- a/about/index.html
+++ b/about/index.html
@@ -14,9 +14,9 @@
 
     <header>
         <a href="../">Home</a>
-        <a href="">Projects</a>
-        <a href="">About</a>
-        <a href="">Others</a>
+        <a href="../projects/">Projects</a>
+        <a href="" style="text-decoration: underline;">About</a>
+        <a href="../others/">Others</a>
     </header>
     <button id="btnTheme" onclick="changeTheme()"></button>
 
