--- a/about/index.html
+++ b/about/index.html
@@ -20,8 +20,10 @@
     </header>
     <button id="btnTheme" onclick="changeTheme()"></button>
 
-    <h1>About</h1>
+    <br><br><br>
+    <h1>About Me</h1> <br>
 
+    <p>My name is Ion.</p>
 
 
 </body>
