--- a/projects/index.html
+++ b/projects/index.html
@@ -20,13 +20,14 @@
     </header>
     <button id="btnTheme" onclick="changeTheme()"></button>
 
-    <br><br><br>
-    <h1>Projects</h1>
-
     <div id="projectsDiv">
 
         <div id="project">
-            
+            <h1>CodeDrafts</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam reiciendis ratione deserunt quas, veritatis nostrum molestiae? Illo quia possimus, error sed reiciendis ut nostrum corporis aliquid aut praesentium eaque molestiae!</p>
+            <img src="https://codedrafts-5as0.onrender.com/images/coding.png" alt="">
+            <a href="https://codedrafts-5as0.onrender.com/">WebSite Here</a>
+            <a href="https://github.com/cc23135/codedrafts">Coding Here</a>
         </div>
 
         <div id="project">
