--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
     <title>Ion Mateus</title>
 
     <link rel="stylesheet" href="./styles/main.css">
+
     <script src="./scripts/changeTheme.js"></script>
+    <script src="./scripts/changeAccentColor.js"></script>
+    
 </head>
 <body>
 
     <header>
-        <a href="" style="text-decoration: underline;">Home</a>
+        <a href="">Home</a>
         <a href="./projects">Projects</a>
         <a href="./about">About</a>
         <a href="./others">Others</a>
@@ -46,7 +49,7 @@
         </p>
         <br>
         <div id="heroBtnDiv">
-            <button class="heroBtn">Resume</button>
+            <button class="heroBtn">Download Resume</button>
             <button class="heroBtn" onclick="window.location.href='./projects'">Portfolio</button>
         </div>
 
