--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         <meta property="og:image:width" content="63">
         <meta property="og:image:height" content="70">
         -->
-
+<!--
     <title>Ion Mateus</title>
 
     <link rel="stylesheet" href="./styles/main.css">
@@ -59,3 +59,5 @@
  
 </body>
 </html>
+    -->
+    <h1>Not complete.</h1>
