--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./about.css">
     <script src="../scripts/changeTheme.js"></script>
     
 </head>
