--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
     <link rel="stylesheet" href="./styles/main.css">
 
     <script src="./scripts/changeTheme.js"></script>
-    <script src="./scripts/changeAccentColor.js"></script>
     
 </head>
 <body>
 
     <header>
-        <a href="">Home</a>
+        <a href="" style="text-decoration: underline;">Home</a>
         <a href="./projects">Projects</a>
         <a href="./about">About</a>
         <a href="./others">Others</a>
@@ -45,12 +44,12 @@
         <h2>Programming Student</h2>
         <h1>Ion Mateus</h1> <br>
         <p>
-            Technical college student.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nobis nostrum delectus vero in ipsum.
         </p>
         <br>
         <div id="heroBtnDiv">
             <button class="heroBtn">Download Resume</button>
-            <button class="heroBtn" onclick="window.location.href='./projects'">Portfolio</button>
+            <button class="heroBtn">Portfolio</button>
         </div>
 
     </div>
