--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,12 +23,13 @@
         <meta property="og:image:width" content="63">
         <meta property="og:image:height" content="70">
         -->
-<!--
+
     <title>Ion Mateus</title>
 
     <link rel="stylesheet" href="./styles/main.css">
 
     <script src="./scripts/changeTheme.js"></script>
+    <script src="./scripts/easterEggs.js"></script>
     
 </head>
 <body>
@@ -58,12 +59,4 @@
  
 </body>
 </html>
-    -->
-
-<h3>Not complete.</h3>
-<h1>Ion Mateus</h1>
-<h3>Links</h3>
-<a href="https://github.com/ionmateus/">GitHub</a>
-<br><h3>Projects</h3>
-<a href="https://codedrafts-5as0.onrender.com/">CodeDrafts - Simple Social Media</a>
-<a href="https://github.com/IonMateus?tab=repositories">Others</a>
+  
