--- a/about/index.html
+++ b/about/index.html
@@ -2,30 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Ion Mateus | Projects</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap">
+
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="./about.css">
-    <script src="../scripts/changeTheme.js"></script>
-    
 </head>
 <body>
 
     <header>
-        <a href="../">Home</a>
-        <a href="../projects/">Projects</a>
-        <a href="" style="text-decoration: underline;">About</a>
-        <a href="../others/">Others</a>
+        <h2>Ion Mateus</h2>
+        <div>
+            <a href="../">Home</a>
+            <a href="../projects/">Projects</a>
+            <a href="./">About</a>
+            <a href="./">Others</a>
+        </div>
     </header>
-    <button id="btnTheme" onclick="changeTheme()"></button>
 
-    <br><br><br>
-    <h1>About Me</h1> <br>
 
-    <p>My name is Ion.</p>
-
+    <h1>Hi!</h1>
+    <p>My name is Ion</p><br>
 
 </body>
 </html>
