more options menu

--- a/about/index.html
+++ b/about/index.html
@@ -9,24 +9,26 @@
 
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="./about.css">
+
+    <script src="../scripts/main.js"></script>
 </head>
 <body>
 
     <header>
-        <h2>Ion Mateus</h2>
-        <div>
+        <h2 onclick="window.location.href='../'">Ion Mateus</h2>
+        <div id="headerLinks">
+            <button id="CloseHeaderMoreOptions" class='headerMoreOptions' onclick="ChangeHeaderMoreOptions()">+</button>
+            <br>
             <a href="../">Home</a>
             <a href="../projects/">Projects</a>
             <a href="./">About</a>
-            <a href="./">Others</a>
         </div>
+        <button id="OpenHeaderMoreOptions" class='headerMoreOptions' onclick="ChangeHeaderMoreOptions()">+</button>
     </header>
 
 
     <h1>Hi!</h1>
     <p>My name is Ion</p><br>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore pariatur est error sit tempore consectetur itaque esse dignissimos veniam voluptate quo ab, temporibus ea porro amet? Illum earum amet praesentium.</p>
 
 </body>
 </html>
