--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     
     <footer class="footer">
         <div class="container footer__container">
-            <p>Ion Mateus © 2025. Gerado por Gemini, estruturado por Ion.</p>
+            <p>Ion Mateus © 2025</p>
         </div>
     </footer>
 
